@@ -1,5 +1,6 @@
 2024-05-27 v1.6.6
 !  Fixed a rare issue with barswaps
+!  Changed the way dodge was detected for more accurate results
 
 2024-05-11 v1.6.5
 !  Updated DariansUtilies for U42 and scribing
